--- a/markup/css/style.css
+++ b/markup/css/style.css
@@ -8,8 +8,6 @@ body{
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	
-
 }
 ul, li{
 	display: block;
@@ -58,7 +56,6 @@ header .button:hover{
 #main{
 	margin: 25px 0;
 }
-
 #main .name-category{
 	padding: 15px 0;
 	text-align: center;
@@ -101,7 +98,7 @@ header .button:hover{
 .form-search{
 	position: relative;
 	width: 100%;
-	margin: 0 auto;
+	margin: 0   auto 50px 0;
 }
 #main .form-search input{
 	height: 40px;
@@ -120,35 +117,57 @@ header .button:hover{
   cursor: pointer;
   font-weight: 700;
 }
-.slider{
-	margin-top:25px;
+/*===============================slider ==========================*/
+#slider{
+	max-width: 100%;
 }
-.owl-controls {
-position: relative;
-top: -40px;
+#slider .images{
+	position: relative;
+	width: 100%;
+	height: 600px;
 }
-.owl-prev {
+#slider .images .slide{
+	 opacity: 0;
+	 transition: opacity 0.2s;
+	 position: absolute;
+	 width: 100%;
+}
+#slider .images .show{
+ opacity: 1;
+}
+
+#slider ul{
 	position: absolute;
-	top: 50%;
-	left: 0px;
+	display: flex;
+	bottom: 20px;
+	left: 40%;
 }
-.owl-next {
+#slider ul li{
+	list-style: none;
+}
+#slider .dot{
+	display: block;
+	width: 12px;
+	height: 12px;
+	margin:0 10px;
+	background: #D6D6D6;
+	border-radius:100%;
+	cursor: pointer;
+}
+#slider .next{
 	position: absolute;
-	right: 0px;
-	top: 50%;
+	right:15px;
+	top:55%;
+	cursor: pointer;
 }
-.owl-dots{
-	position:absolute;
-	left:40%;
-	bottom: 0px;
-}
-.owl-theme .owl-nav [class*='owl-']{
-	background: none;
-}
-.owl-theme .owl-nav [class*='owl-']:hover{
-	background: none;
+#slider .prev{
+	position: absolute;
+	left:15px;
+	top:55%;
+	cursor: pointer;
 }
 /* ===================gellery==================== */
+
 #gallery .bg-color{
 	 background-color:#43433f;
 	 padding:70px 0;
