fixed syntax error

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -146,28 +146,28 @@
 			<div class="row cards">
 				<div class="col-lg-3 d-flex">
 					<div class="card">
-						<img src="{{ url_for('static',filename='img/cube1.png'}}" alt="">
+						<img src="{{ url_for('static',filename='img/cube1.png') }}" alt="">
 						<h2>Dayan 5</h2>
 						<div class="price"><span>100</span><input type="submit"></div>
 					</div>
 				</div>
 				<div class="col-lg-3 d-flex">
 					<div class="card">
-						<img src="{{ url_for('static',filename='img/cube2.png'}}" alt="">
+						<img src="{{ url_for('static',filename='img/cube2.png') }}" alt="">
 						<h2>Valk 3</h2>
 						<div class="price"><span>100</span><input type="submit"></div>
 					</div>
 				</div>
 				<div class="col-lg-3 d-flex">
 					<div class="card">
-						<img src="{{ url_for('static',filename='img/cube3.png'}}" alt="">
+						<img src="{{ url_for('static',filename='img/cube3.png') }}" alt="">
 						<h2>MoFangGe LeiTing v2</h2>
 						<div class="price"><span>100</span><input type="submit"></div>
 					</div>
 				</div>
 				<div class="col-lg-3 d-flex">
 					<div class="card">
-						<img src="{{ url_for('static',filename='img/cube4.png'}}" alt="">
+						<img src="{{ url_for('static',filename='img/cube4.png') }}" alt="">
 						<h2>MoYu AoLong</h2>
 						<div class="price"><span>100</span><input type="submit"></div>
 					</div>
