--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="logo mr-auto margin-header">
-                <a href="#">
+                <a href="{{ url_for('index') }}">
                     <img src="{{ url_for('static',filename='img/logo.svg') }}" alt="">
                 </a>
             </div>
