--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,4 +1,10 @@
 /* option */
+@font-face {
+	font-family: "Xolonium";  
+	src: url("../fonts/Xolonium.ttf") format("truetype");
+	font-style: normal; 
+	font-weight: normal;
+}	
 *{
 	box-sizing: border-box;
 	font-family: "Xolonium", sans-serif;
@@ -8,16 +14,7 @@ body{
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	
-
 }
-@font-face {
-	font-family: "Xolonium";  
-	src: url("../fonts/Xolonium.ttf") format("truetype"); 
-	font-style: normal; 
-	font-weight: normal;
-}
-	
 ul, li{
 	display: block;
 	padding: 0;
@@ -26,7 +23,7 @@ ul, li{
 p{
 	margin:0;
 }
-button{
+.button{
 	background-color: #fff036;
 	border-radius: 10px;
 }
@@ -65,7 +62,6 @@ header .button:hover{
 #main{
 	margin: 25px 0;
 }
-
 #main .name-category{
 	padding: 15px 0;
 	text-align: center;
@@ -76,6 +72,7 @@ header .button:hover{
 }
 #main .category{
 	/* rgba потому что иначе opacity вниутри opacity не работает*/
+	transition: all 2s ease-out 1.5s;
 	background-color: rgba(0,0,0, 0.2);
 	padding-top:5px;
 	padding-bottom: 5px;
@@ -93,6 +90,7 @@ header .button:hover{
 #main .item:first-of-type{
 	margin-top:0;
 }
+
 #main .category a{
 	text-decoration: none;
 }
@@ -128,11 +126,18 @@ header .button:hover{
   font-weight: 700;
 }
 /*===============================slider ==========================*/
+#slider .block{
+	position: relative;
+}
 #slider{
-	max-width: 100%;
+	display: block;
+	height: 100%;
+	width: 100%;
+}
+#slider .block{
+	width: 100%;
 }
 #slider .images{
-	position: relative;
 	width: 100%;
 	height: 600px;
 }
@@ -149,7 +154,7 @@ header .button:hover{
 #slider ul{
 	position: absolute;
 	display: flex;
-	bottom: 20px;
+	bottom: -10;
 	left: 40%;
 }
 #slider ul li{
@@ -167,32 +172,127 @@ header .button:hover{
 #slider .next{
 	position: absolute;
 	right:15px;
-	top:55%;
+	top:50%;
 	cursor: pointer;
 }
 #slider .prev{
 	position: absolute;
 	left:15px;
-	top:55%;
+	top:50%;
 	cursor: pointer;
 }
 /* ===================gellery==================== */
+
 #gallery .bg-color{
 	 background-color:#43433f;
 	 padding:70px 0;
 }
-#gallery .card .price{
- margin-top: auto;
+.icon-menu {
+	display: none;
+	height: 30px;
+	width: 12px;
+	float: left;
+	padding: 5px 0;
+	cursor: pointer;
+	margin-right: 10px;
+	margin-left: -10px;
 }
-#gallery .card{
+
+/*=======================catalog=============*/
+ .product{
+ 	background: #fff none repeat scroll 0 0;
+ 	border: 1px solid #c0c0c0;
+ 	transition: all 0.5s ease 0s;
+	padding: 15px 3px;
+	flex-direction: column;
+	min-height: 380px;
+	margin-right: 15px;
+	margin-top: 15px;
+	border-radius: 10px;
+	background-color:#fff;
+	text-align: center;
 	width: 100%;
+ }
+.product:hover {
+ box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
 }
-#gallery .cards{
-	flex-wrap: wrap;
+.product h2{
+	margin-top: 50px;
+	margin-bottom: 24px;
 }
-#gallery img{
+.product .product-image img {
+ height: auto;
+ max-width: 100%;
+}
+
+.product .product-image{
+	height:200px;
+
+}
+.product .price{
+	display:flex;
+	justify-content: space-between;
+	margin-top: auto;
+}
+.btn-buy{
+	border:3px solid #000;
+	padding: 0 15px;
+	font-weight: 700;
+	/* margin: 0 5px 5px 0; */
+}
+.price span{
+	font-weight: 700;
+	font-size:18px;
+}
+.price sup{
+	font-size:12px;
+}
+
+.divide {
 	display: block;
+	height: 2px;
+	margin: 3px 0;
+	background: #f1f1f1;
 }
 
 
+@media (max-width: 1200px){
 
+	#slider ul{
+		bottom: 90px;
+	}
+
+}
+@media (max-width: 992px) {
+  #slider .block{
+  	margin: 55px 0 140px 0;
+  }
+	#slider .dot{
+		display: none;
+	}
+	#slider .images{
+		height: 500px;
+	}
+	.name-category{
+		cursor: pointer;
+	}
+	.category {
+		display: none;
+		height: 100%;
+	}
+	.category.active {
+		display: block;
+	}
+	#slider .dot{
+		display: none;
+	}
+
+ }
+
+
+@media (max-width: 768px){
+	#slider .images{
+		height: 250px;
+	}
+
+}
