--- a/app/templates/goods.html
+++ b/app/templates/goods.html
@@ -3,14 +3,14 @@
 {% block rightSide %}
         <div class="col-lg-9 products ">
             <div class="row">
-                {% for good in goods %}
+                {% for good in good_by_category %}
                 <div class="col-lg-4 col-md-6 d-flex">
                     <div class="product d-flex">
                         <div class="product-image">
                             <img src="{{ url_for('static',filename='img/cube1.png') }}" alt="">
                         </div>
                         <h2>{{ good.title }}</h2>
-                        <div class="price">
+                        <div class="price"> 
                             <span>{{ good.price }}<sup>грн</sup></span>
                             <input type="submit" value="купить" class="button btn-buy">
                         </div>
