--- a/app/templates/sidebar-base.html
+++ b/app/templates/sidebar-base.html
@@ -15,104 +15,18 @@
                     <p>каталог</p>
                 </div>
                 <div class="category">
+                {% for good in goods %}
                 <ul>
                     <li>
-                        <a href="{{ url_for('goods') }}">
+                        <a href="{{ url_for('goods', category=good.category) }}">
                             <div class="item d-flex align-items-center">
-                                <p>Деревянные</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="item d-flex align-items-center">
-                                <p>Магнитные</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Кубики 2х2х2</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Стандартные</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Кубики 4x4x4</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Кубики 5х5х5</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Кубики 6х6х6</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Пирамида</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Мегамиксы</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Наклейки</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Запчасти</p>
-                                <i class="fas fa-angle-right"></i>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <div class="item d-flex align-items-center">
-                                <p>Масло</p>
+                                <p>{{good.category}}</p>
                                 <i class="fas fa-angle-right"></i>
                             </div>
                         </a>
                     </li>
                 </ul>
+                {% endfor %}
                 </div>
             </div>
             {% block rightSide %}{% endblock %}
