add table category

--- a/app/templates/goods.html
+++ b/app/templates/goods.html
@@ -3,7 +3,7 @@
 {% block rightSide %}
         <div class="col-lg-9 products ">
             <div class="row">
-                {% for good in good_by_category %}
+                {% for good in goods_by_category %}
                 <div class="col-lg-4 col-md-6 d-flex">
                     <div class="product d-flex">
                         <div class="product-image">
