--- a/app/templates/goods.html
+++ b/app/templates/goods.html
@@ -7,7 +7,7 @@
                 <div class="col-lg-4 col-md-6 d-flex">
                     <div class="product d-flex">
                         <div class="product-image">
-                            <img src="{{ url_for('static',filename='img/cube1.png') }}" alt="">
+                            <img src="{{ url_for('static',filename='images/'+good.imgsrc) }}" alt="">
                         </div>
                         <h2>{{ good.title }}</h2>
                         <div class="price"> 
