--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -5,10 +5,10 @@
             <div class="row">
             <div class="col-md-6">
                 <div class="slider">
-                    <img src="../static/img/cube1.png" alt="">
-                    <img src="../static/img/cube2.png" alt="">
-                    <img src="../static/img/cube3.png" alt="">
-                    <img src="../static/img/cube4.png" alt="">
+                    <img src="{{url_for('static', filename='img/cube1.png')}}" alt="">
+                    <img src="{{url_for('static', filename='img/cube2.png')}}" alt="">
+                    <img src="{{url_for('static', filename='img/cube3.png')}}" alt="">
+                    <img src="{{url_for('static', filename='img/cube4.png')}}" alt="">
                 </div>
             </div>
             <div class="col-md-6">
@@ -19,6 +19,11 @@
                     <div class="border ">
                         <p>краткое описание</p>
                         <p>{{ good.desc }}</p>
+                        <form action="{{url_for('addToCart')}}" method="POST">
+                                <input type ="hidden" name = "good_id" value = "{{good.id}}" />
+                                <input type = "submit" value = "submit" />
+                        </form>
+                        
                     </div>
                 </div>
             </div>
