--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -19,8 +19,8 @@
                     <div class="border ">
                         <p>краткое описание</p>
                         <p>{{ good.desc }}</p>
-                        <form action="{{url_for('addToCart')}}" method="POST">
-                                <input type ="hidden" name = "good_id" value = "{{good.id}}" />
+                        <form action="{{url_for('add_to_cart')}}" method="POST">
+                                <input type ="hidden" name = "good_id" value = "{{ good.id }}" />
                                 <input type = "submit" value = "submit" />
                         </form>
                         
